--- a/NorthWindCRUD/Views/Employee/Delete.cshtml
+++ b/NorthWindCRUD/Views/Employee/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model NorthWindCRUD.Models.Employee
+﻿@model NorthWindCRUD.Dtos.EmployeeDto
 
 @{
     ViewBag.Title = "Delete";
@@ -116,7 +116,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Photo)
+            @Html.DisplayNameFor(model => model.PhotoBase64)
         </dt>
 
         <dd>
