--- a/NorthWindCRUD/Views/Employee/Index.cshtml
+++ b/NorthWindCRUD/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<NorthWindCRUD.Models.Employee>
+﻿@model IEnumerable<NorthWindCRUD.Dtos.EmployeeDto>
 
 @{
     ViewBag.Title = "Index";
@@ -30,7 +30,7 @@
             @Html.DisplayNameFor(model => model.HomePhone)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Photo)
+            @Html.DisplayNameFor(model => model.PhotoBase64)
         </th>
         <th></th>
     </tr>
@@ -56,7 +56,7 @@
             @Html.DisplayFor(modelItem => item.HomePhone)
         </td>
         <td>
-            <img src="@item.PhotoBase64" />
+            <img src="@item.PhotoBase64" style="width:200px;" />
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.EmployeeID }) |
