Create of Employ Use DisplayTemplates

--- a/NorthWindCRUD/Views/Employee/Details.cshtml
+++ b/NorthWindCRUD/Views/Employee/Details.cshtml
@@ -127,7 +127,7 @@
         </dt>
 
         <dd>
-            <img src="@Html.ValueFor(model=>model.PhotoBase64)"/>
+            @Html.DisplayFor(model => model.PhotoBase64)
         </dd>
 
         <dt>
