--- a/NorthWindCRUD/Views/Employee/Delete.cshtml
+++ b/NorthWindCRUD/Views/Employee/Delete.cshtml
@@ -120,7 +120,7 @@
         </dt>
 
         <dd>
-            <img src="@Html.ValueFor(model=>model.PhotoBase64)" />"
+            @Html.DisplayFor(model => model.PhotoBase64)
         </dd>
 
         <dt>
@@ -132,7 +132,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ReportsTo)
+            @Html.DisplayNameFor(model => model.IntReportsTo)
         </dt>
 
         <dd>
