--- a/NorthWindCRUD/Views/Employee/Form.cshtml
+++ b/NorthWindCRUD/Views/Employee/Form.cshtml
@@ -1,10 +1,10 @@
-﻿@model NorthWindCRUD.ViewModels.EditEmployeeViewModel
+﻿@model NorthWindCRUD.ViewModels.EmployeeViewModel
 
 @{
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm())
 {
@@ -139,7 +139,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.employeeDto.IntReportsTo, "ReportsTo", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.employeeDto.IntReportsTo, new SelectList(Model.reportCandidates, "Key","Value", Model.employeeDto.IntReportsTo),"-", htmlAttributes: new { @class = "form-control",
+                @Html.DropDownListFor(model => model.employeeDto.IntReportsTo, 
+               new SelectList(Model.reportCandidates, "ReportToId", "ReportToName", Model.employeeDto.IntReportsTo), htmlAttributes: new { @class = "form-control",
            })
                 @Html.ValidationMessageFor(model => model.employeeDto.IntReportsTo, "", new { @class = "text-danger" })
             </div>
