Edit Home Page with some descriptions

--- a/NorthWindCRUD/Views/Home/Contact.cshtml
+++ b/NorthWindCRUD/Views/Home/Contact.cshtml
@@ -4,14 +4,17 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+<img src="~/Images/photo.jpg" />
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <strong>Author:</strong>
+    Lawrence Chen
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Mobile:</strong>
+    +886-987-267-107
+</address>
+
+<address>
+    <strong>Email:</strong>   <a href="mailto:Illuminechen@gmail.com">Illuminechen@gmail.com</a><br />    
 </address>
